--- a/css/style.css
+++ b/css/style.css
@@ -9,5 +9,5 @@ body {
     line-height: 117%;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: blue;
+    color: #434455;
 }
