--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,14 @@ body {
     background-color: #FFFFFF;
 }
 
+a {
+    text-decoration: none;
+}
+
+ul {
+    list-style-type: none;
+}
+
 .header-logo{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
