--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,11 @@ line-height: 150%;
 letter-spacing: 0.02em;
 color: #2e2f42;
 }
+
+.Solutions-buy-btn :hover {
+    color: #404bbf;
+}
+
+.Solutions-buy-btn :focus {
+    color: #404bbf;
+}
