--- a/css/style.css
+++ b/css/style.css
@@ -41,10 +41,9 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 }
 
-.Solutions-buy-btn :hover {
-    background-color: #404bbf;
+.header-menu-item :hover {
+    color: #404bbf;
 }
-
-.Solutions-buy-btn :focus {
-    background-color: #404bbf;
+.header-menu-item :focus {
+    color: #404bbf;
 }
