--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,24 @@ color: #2e2f42;
 .header-menu-item :focus {
     color: #404bbf;
 }
+
+.address-contact {
+    font-style: normal;
+}
+
+.header-menu-item {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.header-menu-item :hover {
+    color: #404bbf;
+}
+
+.header-menu-item :focus {
+    color: #404bbf;
+}
+
+
+
