--- a/css/style.css
+++ b/css/style.css
@@ -48,21 +48,21 @@ color: #2e2f42;
     color: #404bbf;
 }
 
-.address-contact {
+.header-contact {
     font-style: normal;
 }
 
-.address-menu-item {
+.header-menu-item {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
 
-.address-menu-item :hover {
+.header-menu-item :hover {
     color: #404bbf;
 }
 
-.address-menu-item :focus {
+.header-menu-item :focus {
     color: #404bbf;
 }
 
