--- a/css/style.css
+++ b/css/style.css
@@ -78,5 +78,12 @@ text-align: center;
 color: #ffffff;
 }
 
+.solutions-buy-btn {
+    background-color: #4D5AE5;
+}
+
+.strategy-title {
+    color: gray;
+}
 
 
