--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,10 @@ color: #ffffff;
     background-color: #4D5AE5;
 }
 
-.strategy-title {
-    color: gray;
+solutions-buy-btn {
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.04em;
+    color: #ffffff;  
 }
-
 
