--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,10 @@ color: #ffffff;
     background-color: #4D5AE5;
 }
 
-solutions-buy-btn {
+.solutions-buy-btn {
+    font-weight: 500;
     font-size: 16px;
-    line-height: 150%;
+    line-height: 1.5;
     letter-spacing: 0.04em;
     color: #ffffff;  
 }
