--- a/css/style.css
+++ b/css/style.css
@@ -91,11 +91,11 @@ color: #ffffff;
 }
 
 .solutions-buy-btn :hover {
-color: #404BBF;
+background-color: #404BBF;
 }
 
 .solutions-buy-btn :focus {
-color: #404BBF;
+background-color: #404BBF;
 } 
 
 .solutions-buy-btn {
