--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ color: #ffffff;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
+    background-color: #4D5AE5;
     color: #ffffff;  
 }
 
