--- a/css/style.css
+++ b/css/style.css
@@ -83,12 +83,12 @@ color: #ffffff;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
-    background-color: #4D5AE5;
+    background-color: #4d5ae5;
     color: #ffffff;  
 }
 
 .solutions-buy-btn :hover {
-background-color: #404BBF;
+background-color: #404bbf;
 }
 
 .solutions-buy-btn :focus {
