--- a/css/style.css
+++ b/css/style.css
@@ -99,5 +99,19 @@ background-color: #404BBF;
     cursor: pointer;
 }
 
+.qualities-title {
+    font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color:#2e2f42 ;
+}
+
+.qualities-strategy {
+    line-height: 1.2;
+letter-spacing: 0.02em;
+}
+
+
 
 
