--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,18 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 }
 
+.team {
+    background-color: #F4F4FD
+}
+
+.section-heading {
+    font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+}
 
 
 
