--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ letter-spacing: 0.02em;
     background-color: #F4F4FD
 }
 
-.section-heading {
+.team-title {
     font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
