--- a/css/style.css
+++ b/css/style.css
@@ -126,5 +126,12 @@ text-transform: capitalize;
 color: #2e2f42;
 }
 
+.text {
+    font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
 
 
