--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,10 @@ text-transform: capitalize;
 color: #2e2f42;
 }
 
-.text {
+.text{
+    background-color: #FFFFFF
+}
+.section-heading {
     font-weight: 500;
 font-size: 20px;
 line-height: 1.2;
