--- a/css/style.css
+++ b/css/style.css
@@ -143,3 +143,11 @@ color: #2e2f42;
     letter-spacing: 0.02em;
 }
 
+.portfolio-title {
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+}
