--- a/css/style.css
+++ b/css/style.css
@@ -151,3 +151,16 @@ letter-spacing: 0.02em;
 text-align: center;
 color: #2e2f42;
 }
+
+.app-title {
+    font-weight: 500;
+font-size: 20px;
+line-height: 1.2;
+letter-spacing: 0.02em;
+color: #2e2f42;
+}
+
+.app-text {
+line-height: 1.5;
+letter-spacing: 0.02em;
+}
