--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,7 @@ color: #2e2f42;
 .app-title {
     font-weight: 500;
 font-size: 20px;
+text-transform: capitalize;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
