--- a/css/style.css
+++ b/css/style.css
@@ -165,3 +165,17 @@ color: #2e2f42;
 line-height: 1.5;
 letter-spacing: 0.02em;
 }
+
+.footer {
+background-color: #2e2f42;
+}
+
+.footer-logo{
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
