--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,14 @@ color: #F4F4FD;
 .img {
     display: block;
 }
+
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    display: flex;
+    padding: 0 15px 0 15px;
+}
