--- a/css/style.css
+++ b/css/style.css
@@ -216,10 +216,16 @@ color: #F4F4FD;
     margin-right: 76px;
 }
 
+.header-menu-list {
+    display: flex;
+    gap: 40px;
+    padding: 24px 0;
+}
+
 .header-contact-list {
     display: flex;
     gap: 40px;
-    padding: 24px 0
+    padding: 24px 0;
 }
 
 .header-contact {
