--- a/css/style.css
+++ b/css/style.css
@@ -236,3 +236,11 @@ color: #F4F4FD;
     display: flex;
     gap: 40px;
 }
+
+.section-one-container {
+
+}
+
+.section-one {
+    padding: 188px 0 188px;
+}
