--- a/css/style.css
+++ b/css/style.css
@@ -271,5 +271,8 @@ color: #F4F4FD;
 
 .list-qualities {
     display: flex;
-    margin-right: 24px;
+}
+
+.qualities-items {
+    margin-right: 24px
 }
