--- a/css/style.css
+++ b/css/style.css
@@ -271,10 +271,11 @@ color: #F4F4FD;
 
 .list-qualities {
     display: flex;
+    margin-right: 24px;
 }
 
 .qualities-items {
-    margin-right: 24px;
+    width: calc(( 100% - 3 * 24px ) / 4);
 }
 
 .strategy-title {
