--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ color: #F4F4FD;
 }
 
 .qualities-items {
-    width: calc(( 100% - 3 * 24px ) / 4);
+    flex-basis: calc(( 100% - 72px ) / 4 );
 }
 
 .strategy-title {
