--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ color: #F4F4FD;
 }
 
 .qualities-items {
-    flex-basis: calc(( 100% - 72px ) / 4 );
+    flex-basis: calc(( 1128 - 104px ) / 4 );
 }
 
 .strategy-title {
