--- a/css/style.css
+++ b/css/style.css
@@ -298,3 +298,12 @@ color: #F4F4FD;
 .gallery {
     width: calc((100% - 72px) / 4);
 }
+
+.portfolio-item {
+    padding: 32px 0;
+}
+
+.section-heading {
+    text-align: center;
+    margin-bottom: 8px;
+}
