--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ color: #F4F4FD;
 }
 
 .gallery {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc(( 1440px - 72px ) / 4 );
 }
 
 .portfolio-item {
@@ -306,4 +306,8 @@ color: #F4F4FD;
 .section-heading {
     text-align: center;
     margin-bottom: 8px;
+}
+
+.text {
+    text-align: center;
 }
