--- a/css/style.css
+++ b/css/style.css
@@ -312,3 +312,22 @@ color: #F4F4FD;
 .text {
     text-align: center;
 }
+
+.our-portfolio {
+    padding-top: 120px;
+}
+
+.app-title {
+    margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.app {
+    width: calc((100% - 48px) / 3);
+}
