--- a/css/style.css
+++ b/css/style.css
@@ -332,3 +332,10 @@ color: #F4F4FD;
 .app {
     width: calc((100% - 48px) / 3);
 }
+
+.app-item {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+}
