--- a/css/style.css
+++ b/css/style.css
@@ -343,3 +343,16 @@ color: #F4F4FD;
 .app-title {
     margin-bottom: 8px;
 }
+
+.footer {
+    padding: 100px 0;
+}
+
+.footer-logo {
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.footer-text {
+    max-width: 264px;
+}
