--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,11 @@ color: #F4F4FD;
     border-bottom: 1px solid #e7e9fc;
 }
 
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
 .container {
     width: 1158px;
     margin: 0 auto;
