--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,7 @@ color: #F4F4FD;
 }
 
 .gallery {
-    width: calc((100% - 72px) / 4);
+    width: 264px;
     border-radius: 0px 0px 4px 4px;
 }
 
