--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,7 @@ color: #F4F4FD;
 
 .gallery {
     width: 264px;
+    /* width:calc((100% - 72px) / 4); */
     border-radius: 0px 0px 4px 4px;
 }
 
@@ -335,6 +336,7 @@ color: #F4F4FD;
 }
 
 .app {
+    /* width: calc((100% - 48px) / 3); */
     width: calc((100% - 48px) / 3);
 }
 
