--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ a {
 
 ul {
     list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 .header-logo{
@@ -50,6 +52,7 @@ color: #2e2f42;
 
 .address-contact {
     font-style: normal;
+    margin-left: auto;
 }
 
 .header-menu-item {
@@ -76,6 +79,10 @@ line-height: 107%;
 letter-spacing: 0.02em;
 text-align: center;
 color: #ffffff;
+max-width: 496px;
+margin-left: auto;
+margin-right: auto;
+margin-bottom: 48px;
 }
 
 .solutions-buy-btn {
@@ -84,7 +91,8 @@ color: #ffffff;
     line-height: 1.5;
     letter-spacing: 0.04em;
     background-color: #4d5ae5;
-    color: #ffffff;  
+    color: #ffffff; 
+    margin: 0 auto; 
 }
 
 .solutions-buy-btn:hover {
@@ -106,11 +114,13 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color:#2e2f42 ;
+margin:0;
 }
 
 .qualities-strategy {
 line-height: 1.5;
 letter-spacing: 0.02em;
+margin: 0;
 }
 
 .team {
@@ -118,13 +128,14 @@ letter-spacing: 0.02em;
 }
 
 .team-title {
-    font-weight: 500;
+    font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
 text-transform: capitalize;
 color: #2e2f42;
+margin: 0;
 }
 
 .gallery{
@@ -139,11 +150,6 @@ letter-spacing: 0.02em;
 color: #2e2f42;
 }
 
-.text{
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-}
-
 .portfolio-title {
 font-weight: 700;
 font-size: 36px;
@@ -152,6 +158,8 @@ letter-spacing: 0.02em;
 text-transform: capitalize;
 text-align: center;
 color: #2e2f42;
+margin-bottom: 72px;
+    margin: 0;
 }
 
 .app-title {
@@ -160,11 +168,13 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+margin: 0;
 }
 
 .app-text {
 line-height: 1.5;
 letter-spacing: 0.02em;
+margin: 0;
 }
 
 .footer {
@@ -234,7 +244,6 @@ color: #F4F4FD;
 .header-contact-list {
     display: flex;
     gap: 40px;
-    padding: 24px 0;
 }
 
 .header-contact {
@@ -244,10 +253,6 @@ color: #F4F4FD;
 
 .section-one {
     padding: 188px 0 188px;
-}
-
-.solutions-title {
-    max-width: 496px;
 }
 
 .solutions-buy-btn {
@@ -261,7 +266,7 @@ color: #F4F4FD;
     position: absolute;
     width: 1px;
     height: 1px;
-    margin: -1px;
+    margin: 0;
     border: 0;
     padding: 0;
     white-space: nowrap;
@@ -281,10 +286,6 @@ color: #F4F4FD;
 
 .qualities-items {
     flex-basis: calc(( 1128px - 72px ) / 4 );
-}
-
-.strategy-title {
-    margin-bottom: 8px;
 }
 
 .team {
@@ -312,20 +313,19 @@ color: #F4F4FD;
 
 .section-heading {
     text-align: center;
-    margin-bottom: 8px;
+    margin: 0;
 }
 
 .text {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     text-align: center;
+    margin: 0;
 }
 
 .our-portfolio {
     padding-top: 120px;
     padding-bottom: 120px;
-}
-
-.portfolio-title {
-    margin-bottom: 72px;
 }
 
 .portfolio-list {
@@ -343,7 +343,6 @@ color: #F4F4FD;
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
 }
 
 .app-title {
@@ -361,4 +360,5 @@ color: #F4F4FD;
 
 .footer-text {
     max-width: 264px;
+    margin: 0;
 }
