--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,7 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color:#2e2f42 ;
+margin-bottom: 8px;
 margin:0;
 }
 
@@ -168,6 +169,7 @@ font-size: 20px;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color: #2e2f42;
+margin-bottom: 72px;
 margin: 0;
 }
 
@@ -313,6 +315,7 @@ color: #F4F4FD;
 
 .section-heading {
     text-align: center;
+    margin-bottom: 8px;
     margin: 0;
 }
 
