--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ color: #F4F4FD;
     position: absolute;
     width: 1px;
     height: 1px;
-    margin: -1;
+    margin: -1px;
     border: 0;
     padding: 0;
     white-space: nowrap;
