--- a/css/style.css
+++ b/css/style.css
@@ -65,10 +65,14 @@ color: #2e2f42;
     margin-left: auto;
 }
 
-.header-menu-item::after {
+.current {
+    position: relative;
+}
+
+.current::after {
     content: '';
     color: #404bbf;
-    position: relative;
+    position: absolute;
     width: 100%;
     left: 0;
     bottom: -1px;
@@ -78,9 +82,11 @@ color: #2e2f42;
 } 
 
 .header-menu-item {
+    display: block;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .header-contact :hover {
