--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,7 @@ font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.02em;
 color: #2e2f42;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-menu-item :hover {
@@ -67,6 +68,7 @@ color: #2e2f42;
 
 .current {
     position: relative;
+    color: #404bbf;
 }
 
 .current::after {
