--- a/css/style.css
+++ b/css/style.css
@@ -284,6 +284,14 @@ color: #F4F4FD;
 }
 
 .section-one {
+    background-image: 
+    url(../images/peopleoffice1.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
+    background-color: #2e2f42;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    max-width: 1440px;
     padding: 188px 0 188px;
 }
 
@@ -292,6 +300,7 @@ color: #F4F4FD;
     height: 56px;
     border: none;
     border-radius: 4px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .visually-hidden {
