--- a/css/style.css
+++ b/css/style.css
@@ -283,16 +283,15 @@ color: #F4F4FD;
     gap: 40px;
 }
 
-.section-one {
-    background-image: 
+.section-one { 
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
     url(../images/peopleoffice1.jpg);
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
-    background-color: #2e2f42;
-    background-repeat: no-repeat;
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     max-width: 1440px;
     padding: 188px 0 188px;
+    margin: 0 auto;
 }
 
 .solutions-buy-btn {
