--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,17 @@ color: #F4F4FD;
     padding: 120px 0 120px;
 }
 
+.icon-block {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    border: 1px solid #8e8f99;
+    margin-bottom: 8px;
+}
+
 .list-qualities {
     display: flex;
     gap: 24px;
