--- a/css/style.css
+++ b/css/style.css
@@ -328,6 +328,7 @@ color: #F4F4FD;
     border-radius: 4px;
     border: 1px solid #8e8f99;
     margin-bottom: 8px;
+    margin: 0 auto;
 }
 
 .list-qualities {
