--- a/css/style.css
+++ b/css/style.css
@@ -322,11 +322,13 @@ color: #F4F4FD;
 .icon-block {
     display: flex;
     align-items: center;
+    padding: 24px 100px;
     justify-content: center;
     background-color: #f4f4fd;
     border-radius: 4px;
     border: 1px solid #8e8f99;
     margin-bottom: 8px;
+    height: 112px;
 }
 
 .list-qualities {
