--- a/css/style.css
+++ b/css/style.css
@@ -349,6 +349,9 @@ color: #F4F4FD;
 }
 
 .team-list {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
     display: flex;
     gap: 24px;
 }
