--- a/css/style.css
+++ b/css/style.css
@@ -182,12 +182,23 @@ gap: 24px;
 margin-bottom: 8px;
 align-items: center;
 justify-content: center;
+height: 40px;
 }
 
 .our-team-network-list .item{
     padding: 12px;
     background-color: #4d5ae5;
     border-radius: 50%;
+}
+
+.our-team-link {
+width: 100%;
+height: 100%;
+background-color: #4d5ae5;
+border-radius: 50%;
+display: flex;
+align-items: center;
+justify-content: center;
 }
 
 
