--- a/css/style.css
+++ b/css/style.css
@@ -198,10 +198,10 @@ align-items: center;
 justify-content: center;
 }
 
-.our-team-svg:focus {background-color: #404bbf;
+.our-team-link:focus {background-color: #404bbf;
 }
 
-.our-team-svg:hover {background-color: #404bbf;
+.our-team-link:hover {background-color: #404bbf;
     fill: #F4F4FD;
 }
 
