--- a/css/style.css
+++ b/css/style.css
@@ -192,6 +192,7 @@ height: 40px;
 width: 100%;
 height: 100%;
 background-color: #4d5ae5;
+color: #F4F4FD;
 border-radius: 50%;
 display: flex;
 align-items: center;
