--- a/css/style.css
+++ b/css/style.css
@@ -200,9 +200,13 @@ justify-content: center;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.our-team-link:focus {background-color: #404bbf;
+.our-team-link:focus {
+    color: #F4F4FD;
+    background-color: #404bbf;
 }
-.our-team-link:hover {background-color: #404bbf;
+.our-team-link:hover {
+    color: #F4F4FD;
+    background-color: #404bbf;
 }
 
 .our-team-svg {
