--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,12 @@ letter-spacing: 0.02em;
 margin: 0;
 }
 
+.app:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .footer {
 background-color: #2e2f42;
 }
