--- a/css/style.css
+++ b/css/style.css
@@ -452,6 +452,10 @@ overflow: hidden;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.portfolio-text{
+    transform: translateY(100%);
+}
+
 .app {
     width: calc((100% - 48px) / 3);
     padding-left: 0;
