--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,7 @@ transform: translateY(0%);
 }
 
 .app:hover {
+    transform: translateY(0%);
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -453,7 +454,7 @@ overflow: hidden;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-text{
+.portfolio-text:hover {
     transform: translateY(100%);
 }
 
