--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,9 @@ transform: translateY(0%);
 
 .app:hover {
     transform: translateY(0%);
+}
+
+.app:hover {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
