--- a/css/style.css
+++ b/css/style.css
@@ -302,6 +302,8 @@ color: #F4F4FD;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px 0 15px;
+    display: flex;
+    align-items: baseline;
 }
 
 .header-navigation {
