--- a/css/style.css
+++ b/css/style.css
@@ -260,26 +260,8 @@ transform: translateY(0%);
 background-color: #2e2f42;
 }
 
-.footer-logo {
-    font-family: "Raleway", sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-}
-
 .footer-logo-cursive {
     color: #f4f4fd;
-}
-
-.footer-text {
-    font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #F4F4FD;
 }
 
 .img {
@@ -302,8 +284,6 @@ color: #F4F4FD;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px 0 15px;
-    display: flex;
-    align-items: baseline;
 }
 
 .header-navigation {
@@ -485,11 +465,46 @@ overflow: hidden;
 }
 
 .footer-logo {
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
     margin-bottom: 16px;
     display: inline-block;
 }
 
 .footer-text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #F4F4FD;
     max-width: 264px;
     margin: 0;
+}
+
+.footer-box-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-box-link:hover {
+    background-color: #31d0aa;
+}
+
+.footer-box-link:focus {
+    background-color: #31d0aa;
+}
+
+.footer-svg {
+    fill: #f4f4fd;
 }
