--- a/css/style.css
+++ b/css/style.css
@@ -431,6 +431,10 @@ overflow: hidden;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.app:hover .portfolio-text {
+    transform: translateY(0%);
+}
+
 .portfolio-text:hover {
     transform: translateY(100%);
 }
