--- a/css/style.css
+++ b/css/style.css
@@ -536,3 +536,12 @@ overflow: hidden;
 .footer-logo-cursive {
     color: #f4f4fd;
 }
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+}
