--- a/css/style.css
+++ b/css/style.css
@@ -563,6 +563,12 @@ overflow: hidden;
     transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-overlay.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
 .modal-btn {
     position: absolute;
     top: 24px;
