--- a/css/style.css
+++ b/css/style.css
@@ -541,7 +541,6 @@ overflow: hidden;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 999;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.40);
@@ -557,7 +556,7 @@ overflow: hidden;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);;
     border-radius: 4px;
-    transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* .modal-overlay.is-open {
