--- a/css/style.css
+++ b/css/style.css
@@ -581,6 +581,7 @@ overflow: hidden;
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 0;
     cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover {
@@ -591,4 +592,16 @@ overflow: hidden;
 .modal-btn:focus {
     background-color: #404bbf;
     border: none;
+}
+
+.modal-svg {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-svg:hover {
+    fill: #FFFFFF;
+}
+
+.modal-svg:focus {
+    fill: #FFFFFF;
 }
