--- a/css/style.css
+++ b/css/style.css
@@ -598,7 +598,7 @@ overflow: hidden;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-svg:hover, .modal-svg:focus {
+.modal-btn:hover, .modal-btn:focus {
     background-color: #404BBF;
     border: none;
     fill: #FFFFFF;
