--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,7 @@ overflow: hidden;
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transform: translate(-50%, -50%);
+    padding: 72px 24px 24px 24px;
 }
 
 /* .modal-overlay.is-open {
@@ -602,4 +603,14 @@ overflow: hidden;
     background-color: #404BBF;
     border: none;
     fill: #FFFFFF;
+}
+
+.modal-title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 16px;
 }
