--- a/css/style.css
+++ b/css/style.css
@@ -655,3 +655,7 @@ overflow: hidden;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-form-icon:focus {
+    fill: #4D5AE5;
+}
