--- a/css/style.css
+++ b/css/style.css
@@ -645,7 +645,6 @@ overflow: hidden;
 
 .modal-form-icon:focus {
     border-color: #4D5AE5;
-    fill: #4D5AE5;
 }
 
 .modal-icon {
@@ -656,6 +655,6 @@ overflow: hidden;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form-icon:focus {
+input:focus + svg {
     fill: #4D5AE5;
 }
