--- a/css/style.css
+++ b/css/style.css
@@ -683,10 +683,6 @@ input:focus + svg {
     margin-bottom: 24px;
 }
 
-.checkbox-link {
-
-}
-
 .modal-comment {
     margin-bottom: 16px;
 }
@@ -726,4 +722,24 @@ border: none;
     align-items: center;
     justify-content: center;
     fill: transparent;
+}
+
+.link-policy {
+    color: #4d5ae5;
+}
+
+.check-btn {
+    font-family: "Roboto", sans-serif;
+    display: block;
+    font-size: 16px;
+    font-weight: 500;
+    min-width: 169px;
+    height: 56px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
