--- a/css/style.css
+++ b/css/style.css
@@ -728,7 +728,7 @@ border: none;
     color: #4d5ae5;
 }
 
-.check-btn {
+.check-submit-btn {
     font-family: "Roboto", sans-serif;
     display: block;
     font-size: 16px;
