--- a/css/style.css
+++ b/css/style.css
@@ -754,3 +754,22 @@ letter-spacing: 0.02em;
 color: #ffffff;
 margin-bottom: 16px;
 }
+
+.footer-form {
+    display: flex;
+    gap: 24px;
+}
+
+.input-footer-form {
+    border: 1px solid #ffffff;
+border-radius: 4px;
+width: 264px;
+height: 40px;
+background-color: transparent;
+font-size: 12px;
+line-height: 2;
+color: #FFFFFF;
+letter-spacing: 0.04em;
+padding-left: 16px;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
