--- a/css/style.css
+++ b/css/style.css
@@ -773,3 +773,21 @@ letter-spacing: 0.04em;
 padding-left: 16px;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
+
+.button-footer-form {
+    font-family: "Roboto", sans-serif;
+    align-items: center;
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
+}
