--- a/css/style.css
+++ b/css/style.css
@@ -791,3 +791,7 @@ box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: none;
     border-radius: 4px;
 }
+
+.footer-form-svg {
+    margin-left: 16px;
+}
