--- a/css/style.css
+++ b/css/style.css
@@ -772,6 +772,7 @@ color: #FFFFFF;
 letter-spacing: 0.04em;
 padding-left: 16px;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+margin-left: 80px;
 }
 
 .button-footer-form {
