--- a/css/style.css
+++ b/css/style.css
@@ -706,10 +706,10 @@ input:focus + svg {
     fill: transparent;
 }
 
-.checkbox-link:checked+.check-text>.check-icon {
+.checkbox-link:checked+.check-text>.check-span {
     background-color: #404BBF;
-    fill: #F4F4FD;
     border: none;
+    fill: #F4F4FD;
 }
 
 .check-span {
