--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ line-height: 107%;
 letter-spacing: 0.02em;
 text-align: center;
 color: #ffffff;
-max-width: 496px;
+max-width: 216px;
 margin-left: auto;
 margin-right: auto;
 margin-bottom: 48px;
@@ -139,8 +139,11 @@ background-color: #404BBF;
 }
 
 .strategy-title {
-font-weight: 500;
-font-size: 20px;
+/* font-weight: 500; */
+/* font-size: 20px; */
+font-weight: 700;
+font-size: 16px;
+text-align: center;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color:#2e2f42 ;
@@ -148,6 +151,8 @@ margin-bottom: 8px;
 }
 
 .qualities-strategy {
+    font-weight: 500;
+    font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 margin: 0;
@@ -289,6 +294,7 @@ transform: translateY(0%);
 
 .header-menu-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 40px;
     padding: 24px 0;
 }
@@ -313,7 +319,7 @@ transform: translateY(0%);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    max-width: 1440px;
+    width: 320px;
     padding: 188px 0 188px;
     margin: 0 auto;
 }
@@ -340,10 +346,10 @@ transform: translateY(0%);
 }
 
 .qualities {
-    padding: 120px 0 120px;
+    padding: 96px 0 96px;
 }
 
-.icon-block {
+/* .icon-block {
     display: flex;
     align-items: center;
     padding: 24px 100px;
@@ -353,19 +359,22 @@ transform: translateY(0%);
     border: 1px solid #8e8f99;
     margin-bottom: 8px;
     height: 112px;
-}
+} */
 
 .list-qualities {
+    width: 288px;
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    /* gap: 24px; */
 }
 
-.qualities-items {
+/* .qualities-items {
     flex-basis: calc(( 1128px - 72px ) / 4 );
-}
+} */
 
 .team {
-    padding: 120px 0;
+    /* padding: 120px 0; */
+    padding: 96px 0;
 }
 
 .team-title {
@@ -374,7 +383,9 @@ transform: translateY(0%);
 
 .team-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 24px;
+    
 }
 
 .gallery {
@@ -388,11 +399,13 @@ transform: translateY(0%);
 }
 
 .section-heading {
+    font-weight: 500;
     text-align: center;
     margin-bottom: 8px;
 }
 
 .text {
+    font-weight: 400;
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: center;
@@ -409,6 +422,7 @@ transform: translateY(0%);
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
+    justify-content: center;
 }
 
 .portfolio-div {
@@ -453,6 +467,7 @@ overflow: hidden;
 }
 
 .footer {
+    width: 320px;
     padding: 100px 0;
 }
 
@@ -797,4 +812,8 @@ margin-left: 80px;
 .footer-form-svg {
     margin-left: 16px;
     fill: #FFFFFF;
+}
+
+@media screen and (min-width: 768px) {
+    
 }
