--- a/css/style.css
+++ b/css/style.css
@@ -815,5 +815,15 @@ margin-left: 80px;
 }
 
 @media screen and (min-width: 768px) {
-    
+    .container {
+        max-width: 768px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
