--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,7 @@ text-align: center;
 line-height: 1.2;
 letter-spacing: 0.02em;
 color:#2e2f42 ;
+padding-bottom: 8px;
 margin-bottom: 8px;
 }
 
@@ -156,6 +157,10 @@ margin-bottom: 8px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 margin: 0;
+}
+
+.qualities-items {
+margin-top: 72px;
 }
 
 .team {
@@ -349,8 +354,9 @@ transform: translateY(0%);
     padding: 96px 0 96px;
 }
 
-/* .icon-block {
-    display: flex;
+.icon-block {
+    /* display: flex; */
+    display: none;
     align-items: center;
     padding: 24px 100px;
     justify-content: center;
@@ -359,7 +365,7 @@ transform: translateY(0%);
     border: 1px solid #8e8f99;
     margin-bottom: 8px;
     height: 112px;
-} */
+}
 
 .list-qualities {
     width: 288px;
@@ -418,8 +424,8 @@ transform: translateY(0%);
 }
 
 .portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
+    width: 320px;
+    display: block;
     column-gap: 24px;
     row-gap: 48px;
     justify-content: center;
@@ -450,7 +456,7 @@ overflow: hidden;
 }
 
 .app {
-    width: calc((100% - 48px) / 3);
+    /* width: calc((100% - 48px) / 3); */
     padding-left: 0;
     margin: 0;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -817,6 +823,12 @@ margin-left: 80px;
 @media screen and (min-width: 768px) {
     .container {
         max-width: 768px;
+    }
+
+    .list-qualities {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 24px;
     }
 }
 
