--- a/css/style.css
+++ b/css/style.css
@@ -822,13 +822,19 @@ margin-left: 80px;
 
 @media screen and (min-width: 768px) {
     .container {
-        max-width: 768px;
+        width: 768px;
     }
 
-    .header-menu-list {
-        display: flex;
+    .header-menu-link {
+        display: inline;
         gap: 40px;
         padding: 24px 0;
+    }
+
+    .header-contact-list {
+        display: flex;
+        flex-wrap: wrap;
+        padding-left: 24px;
     }
 
     .list-qualities {
