--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,14 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #404bbf;
 }
 
+.open-menu-btn {
+    padding: 0;
+    line-height: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+}
+
 .section-one {
     background-color: #2e2f42;
 }
