--- a/css/style.css
+++ b/css/style.css
@@ -45,59 +45,9 @@ ul {
     color: #2e2f42;
 }
 
-.header-menu-link {
-font-family: "Roboto", sans-serif;
-font-weight: 500;
-font-size: 16px;
-line-height: 150%;
-letter-spacing: 0.02em;
-color: #2e2f42;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-menu-item :hover {
-    color: #404bbf;
-}
-.header-menu-item :focus {
-    color: #404bbf;
-}
-
 .address-contact {
     font-style: normal;
     margin-left: auto;
-}
-
-.current {
-    position: relative;
-    color: #404bbf;
-}
-
-.current::after {
-    content: '';
-    color: #404bbf;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-} 
-
-.header-menu-item {
-    display: block;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #434455;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
-
-.header-contact :hover {
-    color: #404bbf;
-}
-
-.header-contact :focus {
-    color: #404bbf;
 }
 
 .open-menu-btn {
@@ -316,9 +266,9 @@ transform: translateY(0%);
     padding: 24px 0 24px;
 }
 
-.header-contact-list {
+/* .header-contact-list {
     display: none;
-}
+} */
 
 .header-contact {
     display: flex;
@@ -855,9 +805,74 @@ margin-left: 80px;
         }
         }
 
+        .header-menu-list {
+            display: flex;
+            gap: 40px;
+        }
+
+        .header-logo {
+            margin-right: 120px;
+        }
+
+        .open-menu-btn {
+            display: none;
+        }
+
+        .address-contact {
+            display: block;
+        }
+
         .solutions-title {
             max-width: 768px;
         }
+
+                .header-menu-link {
+                    font-family: "Roboto", sans-serif;
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 150%;
+                    letter-spacing: 0.02em;
+                    color: #2e2f42;
+                    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                }
+
+                .header-menu-link:hover,
+                .header-menu-link:focus {
+                color: #404BBF;
+                }
+
+                .current {
+                    position: relative;
+                    color: #404bbf;
+                                }
+
+                .current::after {
+                    content: '';
+                    color: #404bbf;
+                    position: absolute;
+                    width: 100%;
+                    left: 0;
+                    bottom: -1px;
+                    height: 4px;
+                    background-color: #404bbf;
+                    border-radius: 2px;
+                }
+                
+                .header-menu-item {
+                    display: block;
+                    line-height: 1.5;
+                    letter-spacing: 0.02em;
+                    color: #434455;
+                    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
+                }
+        
+                .header-contact :hover {
+                    color: #404bbf;
+                }
+        
+                .header-contact :focus {
+                    color: #404bbf;
+                }
 
     .list-qualities {
         width: 100%;
