--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,13 @@ ul {
     border: none;
 }
 
+.close-menu-btn {
+    padding: 0;
+    line-height: 0;
+    border-radius: 100%;
+    stroke-width: 1px;
+}
+
 .section-one {
     background-color: #2e2f42;
 }
