--- a/css/style.css
+++ b/css/style.css
@@ -104,9 +104,12 @@ ul {
 }
 
 .mob-contact-list {
+    padding-bottom: 48px;
 }
 
-.mob-contact {}
+.mob-contact:not(:last-child) {
+    padding-bottom: 24px;
+}
 
 .mob-network-list {
 }
@@ -114,11 +117,20 @@ ul {
 .mob-item {}
 
 .our-mob-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-mob-svg {
     color: #F4F4FD;
     fill: #F4F4FD;
 }
-
-.our-mob-svg {}
 
 .section-one {
     background-color: #2e2f42;
