--- a/css/style.css
+++ b/css/style.css
@@ -117,13 +117,12 @@ ul {
 .mob-item {}
 
 .our-mob-link {
-    width: 100%;
-    height: 100%;
+    width: 40px;
+    height: 40px;
     background-color: #4d5ae5;
     border-radius: 50%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    gap: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
