--- a/css/style.css
+++ b/css/style.css
@@ -517,13 +517,17 @@ overflow: hidden;
 }
 
 .footer {
-    width: 320px;
+    width: 100%;
     padding: 100px 0;
 }
 
 .footer-div {
-    align-items: baseline;
-    display: flex;
+    /* align-items: baseline;
+    display: flex; */
+    /* display: flex; */
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+    margin: 0 16px;
 }
 
 .footer-logo {
@@ -536,6 +540,9 @@ overflow: hidden;
     color: #4d5ae5;
     margin-bottom: 16px;
     display: inline-block;
+    justify-content: center;
+    text-align: center;
+    padding-left: 86px;
 }
 
 .footer-box-text {
@@ -545,10 +552,20 @@ overflow: hidden;
     letter-spacing: 0.02em;
     color: #FFFFFF;
     margin-bottom: 16px;
+    margin-left: 112px;
 }
 
 .footer-box {
-    margin-right: 120px;
+    /* margin-right: 120px;
+    display: flex;
+    flex-wrap: wrap; */
+    margin-left: 16px;
+    margin-right: 16px;
+    margin-bottom: 72px;
+}
+
+.footer-box-second {
+
 }
 
 .footer-text {
@@ -564,6 +581,8 @@ overflow: hidden;
 .footer-box-list {
     display: flex;
     gap: 16px;
+    margin-left: 56px;
+    margin-bottom: 72px;
 }
 
 .footer-box-item {
@@ -817,12 +836,14 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #ffffff;
 margin-bottom: 16px;
-margin-left: 80px;
+/* margin-left: 80px; */
+padding-left: 122px;
 }
 
 .footer-form {
-    display: flex;
-    gap: 24px;
+    /* display: flex; */
+    /* gap: 24px; */
+
 }
 
 .input-footer-form {
@@ -837,7 +858,7 @@ color: #FFFFFF;
 letter-spacing: 0.04em;
 padding-left: 16px;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-margin-left: 80px;
+/* margin-left: 80px; */
 }
 
 .button-footer-form {
@@ -862,6 +883,7 @@ margin-left: 80px;
     margin-left: 16px;
     fill: #FFFFFF;
 }
+
 
 @media screen and (min-width: 768px) {
     .container {
